tests/negative/syntax/unfinished-program/err.expected
ERROR:
Expected the beginning of another definition at test.smol:9:1-9:7:
         8 | 
         9 | static other() Unit {}
           | ^^^^^^
